--- a/order-api/src/main/resources/application.yml
+++ b/order-api/src/main/resources/application.yml
@@ -1,13 +1,23 @@
 spring:
   application:
     name: order-api
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: root
+    password: root
   jpa:
     hibernate:
-      ddl-auto: create
-  datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/orderdb?characterEncoding=UTF-8&serverTimezone=UTC
-    username: root
-    password: secret
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
+        id:
+          new_generator_mappings: false
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 app:
   jwt:
