--- a/order-ui/package.json
+++ b/order-ui/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "axios": "^0.27.2",
+    "eslint": "^8.30.0",
+    "eslint-plugin-react": "^7.31.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.1",
-    "axios": "^0.27.2",
     "react-router-dom": "^5.3.0",
-    "semantic-ui-react": "^2.1.3"
+    "react-scripts": "5.0.1",
+    "semantic-ui-react": "^2.1.3",
+    "web-vitals": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.9.4"
   }
 }
