--- a/order-ui/package.json
+++ b/order-ui/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.29.1",
     "@types/react-router-dom": "^5.3.3",
     "typescript": "^4.9.4"
   }
