--- a/order-api/pom.xml
+++ b/order-api/pom.xml
@@ -19,7 +19,6 @@
         <jjwt.version>0.11.5</jjwt.version>
         <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <springdoc-openapi.version>1.6.14</springdoc-openapi.version>
     </properties>
 
     <dependencies>
@@ -69,14 +68,9 @@
         <!-- SpringDoc OpenApi -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>${springdoc-openapi.version}</version>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.2</version>
         </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-security</artifactId>
-            <version>${springdoc-openapi.version}</version>
-         </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
